[ADD] the host runs and express opens the login page.
[DEBUG] passport strategies have not been tested.

--- a/public/login.html
+++ b/public/login.html
@@ -1,4 +1,4 @@
-<div>
+<div class="col-xs-12 col-sm-6 col-md-8">
     <form ng-submit="login()">
         <label>Username:</label>
         <input type="text" class="form-control" min="1" max="32" title="Input username (max length 32 characters)" ng-model="username"><br>
