--- a/public/login.html
+++ b/public/login.html
@@ -1,8 +1,25 @@
 <div class="col-xs-12 col-sm-6 col-md-8">
-    <form ng-submit="login()">
-        <label>Username:</label>
-        <input type="text" class="form-control" min="1" max="32" title="Input username (max length 32 characters)" ng-model="username"><br>
-        <label>Password:</label>
-        <input type="password" class="form-control" ng-model="password" min="11" max="128" title="Input password (max length 128 characters)">
+    <form ng-submit="login(choiceStrategy)">
+        <div>
+            <label>Username:</label>
+            <input type="text" ng-model="username" class="form-control" min="1" max="32" title="Input username (max length 32 characters)">
+        </div>
+
+        <div>
+            <label>Password:</label>
+            <input type="password" ng-model="password" class="form-control" ng-model="password" min="11" max="128" title="Input password (max length 128 characters)">
+        </div>
+        <div>
+            <input type="submit" value="Log In">
+        </div>
     </form>
+
+    <p>
+        <a class="btn btn-default" href="/auth/google"><i class="fa fa-google-plus fa-2x"></i>Login with Google</a>
+    </p>
+    </p>
+    <a class="btn btn-default" href="/auth/meetup"> Login with Meetup</a>
+    </p>
+
+    <a href="#/signup">Register</a>
 </div>
