[ADD] passport is working with meetup and google now.
bCrypt is working

--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,7 @@
     
     <div ng-view></div>
     
-    <br>
-    <button ng-click="logout()">Logout</button>
+    <a href="/auth/logout" class="btn btn-default">Logout</a>
 
 </body>
 
