removing google and meetup api references. Simplifying the app.

--- a/public/index.html
+++ b/public/index.html
@@ -75,10 +75,6 @@
         </p>
         
         </p>
-            <a class="btn btn-default" href="/auth/meetup">Meetup</a>
-        </p>
-        
-        </p>
             <a class="btn btn-default" href="http://localhost:3000/signup.html">Register</a>
         </p>
 
@@ -86,6 +82,7 @@
 
 
     <a href="/auth/logout" class="btn btn-default">Logout</a>
+    <p>Logged in user: {{current_user}}</p>
 
 </body>
 
