--- a/public/signup.html
+++ b/public/signup.html
@@ -85,7 +85,7 @@
 </div>
     
     <a href="/auth/logout" class="btn btn-default">Logout</a>
-
+<p>Logged in user: {{current_user}}</p>
 </body>
 
 </html>
