[ADD] putting MomentJS into the app. formatting dates.

--- a/public/profile.html
+++ b/public/profile.html
@@ -136,6 +136,14 @@
 
                         <dt>Refresh Token:</dt>
                         <dd>{{usrRefreshToken}}</dd>
+
+                        <dt>Time:</dt>
+                        <dd>From last login - {{timeFrom}}, <br>
+                        To end of 2016 - {{timeTo}}, <br>
+                        Daylight savings "New York" - {{tzOffset1}}, <br>
+                        Daylight savings "San Francisco" - {{tzOffset3}}, <br>
+                        Daylight savings ended - {{tzOffset2}}                        
+                        </dd>
                             
                     </dl>
                 </p>
