[ADD] installed helmet for security.
[DEBUG] issues with loggedin and google username. It always comes back as not authenticated.

--- a/public/profile.html
+++ b/public/profile.html
@@ -49,9 +49,6 @@
 <body>
     
     <div ng-controller="profCtrl">
-
-    <a href="/auth/logout" class="btn btn-default">Logout</a>
-    <br><br>
         <button class="btn btn-default" ng-click="getUser()">
     Get current_user
     </button>
@@ -78,6 +75,9 @@
                     </li>
                     <li>
                         <a href="/auth/google">Google Login</a>
+                    </li>
+                    <li>
+                        <a href="/auth/logout">Logout</a>
                     </li>
                 </ul>
             </div>
